--- a/作業Hong題目 (2).ipynb
+++ b/作業Hong題目 (2).ipynb
@@ -117,18 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "array3 = np.array([[4,5,6], [1,2,3]])\n",
-    "with open('multi_array.npz', 'wb') as f:\n",
-    "    np.savez(f, array1=array1, array2=array2,array3=array3)"
+    "load_array = np.load('multi_array.npz')\n",
+    "with open('new_array.npz', 'wb') as f:\n",
+    "    np.savez(f, load_array['array1'],load_array['array2'],array3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -137,57 +138,34 @@
        "numpy.lib.npyio.NpzFile"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "npzfile = np.load('multi_array.npz')\n",
+    "npzfile = np.load('new_array.npz')\n",
     "type(npzfile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['array1', 'array2', 'array3']"
+       "['arr_0', 'arr_1', 'arr_2']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "npzfile.files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
-      " 24 25 26 27 28 29]\n",
-      "[2 3 5]\n",
-      "[[4 5 6]\n",
-      " [1 2 3]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(npzfile['array1'])\n",
-    "print(npzfile['array2'])\n",
-    "print(npzfile['array3'])"
    ]
   },
   {
