--- a/作業Hong題目 (3).ipynb
+++ b/作業Hong題目 (3).ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "id": "OHSs5etxnL8D"
    },
@@ -138,17 +138,21 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "(array([[-0.91663818, -0.39971796],\n",
+       "        [-0.39971796,  0.91663818]]),\n",
+       " array([13.94721714,  1.86417116]),\n",
+       " array([[-0.74319741, -0.6690722 ],\n",
+       "        [-0.6690722 ,  0.74319741]]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#3. 運用上列array計算SVD?\n",
-    "np.linalg.matrix_rank(array1)"
+    "np.linalg.svd(array1)"
    ]
   },
   {
