--- a/類別資料與缺值處理作業題目.ipynb
+++ b/類別資料與缺值處理作業題目.ipynb
@@ -297,7 +297,7 @@
    ],
    "source": [
     "#更進一步將字串做編碼。 此時用什麼方式做編碼比較適合?為什麼?\n",
-    "#適合用沒有順序性的編碼，因為各profession之間不具順序關係\n",
+    "#適合用one-hot encoding，因為各profession之間不具順序關係\n",
     "pf=pd.get_dummies(q_df['Profession'])\n",
     "q_df=pd.concat([q_df,pf],axis=1)\n",
     "q_df"
