--- a/作業題目 (1).ipynb
+++ b/作業題目 (1).ipynb
@@ -88,7 +88,7 @@
    ],
    "source": [
     "#1.畫出箱型圖，並判斷哪個欄位的中位數在300~400之間?\n",
-    "#TAX,B\n",
+    "#TAX\n",
     "boston=pd.read_csv('boston.csv')\n",
     "boston.boxplot(rot=45,fontsize=8)"
    ]
